# cmake-c-verify

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: c_verify.cmake  c_verify_clang_format.cmake  c_verify_clang_tidy.cmake  clang_format.cmake  clang_tidy.cmake  path.cmake
tests/: CMakeLists.txt  Makefile
tests/simple/: CMakeLists.txt  Makefile
tests/simple/cmake/: include_library.cmake
tests/simple/source/: CMakeLists.txt  hello.c  hello.h  main.c
